# remotefs-rs

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/actions-rs/: grcov.yml
.github/workflows/: coverage.yml  freebsd.yml  linux.yml  macos.yml  windows.yml
src/: lib.rs
src/client/: mod.rs
src/client/aws_s3/: mod.rs  object.rs
src/client/ftp/: mod.rs
src/client/ssh/: commons.rs  config.rs  mod.rs  scp.rs  sftp.rs
src/fs/: async_t.rs  errors.rs  file.rs  mod.rs  params.rs  stream.rs  sync.rs  welcome.rs
src/fs/driver/ssh/: mod.rs  sftp.rs
src/fs/drivers/: mod.rs
src/fs/drivers/ssh/: mod.rs
src/fs/file/: file_type.rs  metadata.rs  mod.rs  permissions.rs
src/mock/: fs.rs  mod.rs  ssh.rs
src/utils/: fmt.rs  mod.rs  parser.rs  path.rs
