[package]
authors = ["Christian Visintin <christian.visintin1997@gmail.com>"]
categories = ["network-programming"]
description = "a client library to work with all file transfer protocols"
documentation = "https://docs.rs/remotefs"
edition = "2021"
homepage = "https://veeso.github.io/remotefs/"
include = ["src/**/*", "LICENSE", "README.md", "CHANGELOG.md"]
keywords = ["scp-client", "sftp-client", "ftp-client", "s3-client"]
license = "MIT"
name = "remotefs"
readme = "README.md"
repository = "https://github.com/veeso/remotefs-rs"
version = "0.2.0"

[dependencies]
chrono = "^0.4"
log = "^0.4"
thiserror = "^1"
wildmatch = { version = "^2", optional = true }

[dev-dependencies]
env_logger = "^0.11"
pretty_assertions = "^1"
tempfile = "^3"

[features]
default = ["find"]
# misc
find = ["wildmatch"]
no-log = ["log/max_level_off"]
# tests
github-actions = []
with-containers = []
